# lexi

./: CMakeLists.txt  README.md  main.cpp
include/: Glyph.h  Window.h  gt.h
src/: CMakeLists.txt  Glyph.cpp  gt.c  gt.cpp
